# dio

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/dio-cli/: CLAUDE.md  Cargo.toml
crates/dio-cli/src/: main.rs
crates/dio-core/: CLAUDE.md  Cargo.toml
crates/dio-core/src/: context.rs  deobfuscator.rs  diagnostics.rs  lib.rs  operations.rs  transformer.rs  utils.rs
crates/dio-core/src/pattern/: CLAUDE.md  capture.rs  combinators.rs  expression.rs  mod.rs  statement.rs
crates/dio-core/src/presets/: akamai.rs  datadome.rs  debundler.rs  jsfuck.rs  mod.rs  obfuscator_io.rs
crates/dio-core/src/transforms/: CLAUDE.md  mod.rs
crates/dio-core/src/transforms/akamai/: initializer_inlining_transformer.rs  mod.rs  switch_dispatch_transformer.rs
crates/dio-core/src/transforms/constant/: constant_folding_transformer.rs  constant_inlining_transformer.rs  mod.rs
crates/dio-core/src/transforms/datadome/: mod.rs  set_timeout_unwrap_transformer.rs
crates/dio-core/src/transforms/debundler/: browserify_annotation_transformer.rs  mod.rs
crates/dio-core/src/transforms/elimination/: dead_code_transformer.rs  mod.rs  (+1 more)
crates/dio-core/src/utils/: eval.rs  mod.rs
crates/dio-core/tests/: bitwise_simplification.rs  builtin_evaluation.rs  combined.rs  constant_folding.rs  constant_inlining.rs  control_flow.rs  control_flow_array.rs  control_flow_flattening.rs  dead_code.rs  declaration_merge.rs  function_declaration.rs  global_alias_simplification.rs  integration.rs  literal_method_evaluation.rs  presets.rs  proxy_function_inlining.rs  set_timeout_unwrap.rs  simplification.rs  string_array_decoder.rs  string_concatenation.rs
crates/dio-core/tests/common/: mod.rs
crates/dio-napi/: CLAUDE.md  Cargo.toml  package.json
crates/dio-napi/src/: lib.rs
(+47 files in other folders)
