[package]
name = "dio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for dio JavaScript deobfuscator"

[[bin]]
name = "dio"
path = "src/main.rs"

[dependencies]
dio-core = { path = "../dio-core" }
clap = { version = "4", features = ["derive"] }
